# infusion-syringe-pump-lavdalo

./: Shipathon final.ipynb  answer.csv  api.py  app.py  breakingbaddialogue_cleaned_new.csv  character_predictions_analysis.csv  cleaned_chat.csv  filtered_breakingbad_dialogue.csv  final_code.py  index.html  input_chat.csv  input_chat.txt  main.py  pyproject.toml  requirements.txt  sorted_whatsapp_final.csv  svm_model.pkl  tfidf_vectorizer.pkl  train_model.py  utils.py  whatsapp_final_cleaned.csv
