[project]
name = "final-code"
version = "0.1.0"
description = "Breaking Bad Chat Analyzer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "nltk>=3.8.1",
    "joblib>=1.3.2",
    "scikit-learn>=1.3.0"
]
